--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="note_title_edit_text">Note title</string>
     <string name="note_subtitle_edit_text">Note subtitle</string>
     <string name="input_note_edit_text">Type your awesome note here</string>
+    <string name="miscellaneous">Miscellaneous</string>
+    <string name="pick_color">Pick Color</string>
 </resources>
