--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="input_note_edit_text">Type your awesome note here</string>
     <string name="miscellaneous">Miscellaneous</string>
     <string name="pick_color">Pick Color</string>
+    <string name="add_image">Add Image</string>
 </resources>
